# systeminfoapi

./: .gitignore  Cargo.toml  README.md
examples/: postman_collection.json
src/: main.rs
