[package]
name = "system_info_api"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "System Information API"
license = "MIT"

[dependencies]
# 简化 actix-web 配置
actix-web = "4"
sysinfo = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whoami = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true